# mlops-zoomcamp-24

./: .gitignore  README.md
01-intro/: homework.ipynb
02-model-tracking/: Readme.md  hpo.py  register_model.py  train.py
02-model-tracking/service/: compose.yaml
02-model-tracking/service/mlflow/: Dockerfile
03-orchestration/: docker-compose.yml  features.py  homework.md  load_data.py  train.py
04-deployment/: README.md  pyproject.toml
04-deployment/04_deployment/: starter.py
05-monitoring/: pyproject.toml  report.json
05-monitoring/scripts/: homework.py
