[tool.poetry]
name = "04-deployment"
version = "0.1.0"
description = ""
authors = ["Guilherme <guilherme.lopes@engenharia.ufjf.br>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "1.5.0"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
